--- a/index.html
+++ b/index.html
@@ -74,6 +74,39 @@
         }
 
     </style>
+    <style>
+    /* Preloader overlay */
+    #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #FFD700; /* Gold background */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+    }
+
+    /* Preloader G styling */
+    #preloader-logo {
+        font-size: 80px; /* Adjust size as needed */
+        font-weight: bold;
+        color: #000; /* Black text color */
+        animation: spin 2s linear infinite;
+    }
+
+    /* Spin animation */
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    </style>
 </head>
 <body>
 
@@ -146,6 +179,10 @@
             </div>
         </div>
     </section>
+    <!-- Preloader -->
+<div id="preloader">
+    <div id="preloader-logo">G</div>
+</div>
 
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -156,6 +193,12 @@
         $(document).ready(function() {
             $('#constructionModal').modal('show');
         });
+    </script>
+    <script>
+    window.addEventListener("load", function() {
+        const preloader = document.getElementById("preloader");
+        preloader.style.display = "none"; // Hide preloader after page loads
+    });
     </script>
 </body>
 </html>
