--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ footer a:hover {
 </head>
 <body>
 
-<!-- Preloader -->
+<!-- Preloader --
 <div class="preloader">
   <svg width="300" height="300" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
     <g fill="none" stroke="#FFA500" stroke-width="10" stroke-linecap="round">
