--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
-    <img src="your-logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
+    <img src="gantasolutions.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
     Ganta Solutions
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -262,7 +262,7 @@ s0.parentNode.insertBefore(s1,s0);
     </form>
   </div>
 
- <h2>Contact Us</h2>
+ <h2id="contact">Contact Us</h2>
 <div class="row mb-4">
   <div class="col-md-4">
     <div class="card bg-dark text-white">
