--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 
 <!-- Hero Section -->
-<div class="hero-section" style="background-image: url('path_to_your_background_image.jpg'); background-size: cover; background-position: center; height: 80vh; color: white; display: flex; align-items: center; justify-content: center; text-align: center;">
+<div class="hero-section" style="background-image: url('gantasolutions1.png'); background-size: cover; background-position: center; height: 80vh; color: white; display: flex; align-items: center; justify-content: center; text-align: center;">
   <div class="container">
-    <img src="path_to_feavie_logo.png" alt="Feavie Logo" style="width: 100px; height: auto; margin-bottom: 20px;"> <!-- Logo -->
+    <img src="gantasolutions.png" alt="Ganta Solutions" style="width: 100px; height: auto; margin-bottom: 20px;"> <!-- Logo -->
     <h1 class="display-4">Welcome to Ganta Solutions</h1>
     <p class="lead">Transforming your business vision into reality with expert digital solutions in web development, branding, and marketing.</p>
     <a href="#appointment" class="btn btn-warning btn-lg">Schedule an Appointment</a>
