--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ footer a:hover {
         <a class="nav-link" href="#contact">Contact</a>
       </li>
     </ul>
+    <li class="nav-item">
+        <a class="nav-link" href="service.html">Service</a>
+      </li>
+    </ul>
     <button class="btn btn-light ml-3" type="button">Get Started</button> <!-- UI Button -->
   </div>
 </nav>
